# crop_irradiance

./: .buildinfo  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  absorbed_lumped.html  absorbed_sunlit_shaded.html  genindex.html  index.html  objects.inv  overview.html  pyproject.toml  references.html  search.html  searchindex.js  setup.py  uniform_crops.html
.github/workflows/: gh.yml  main.yml
_sources/: absorbed_lumped.rst.txt
doc/: absorbed_lumped.rst  absorbed_sunlit_shaded.rst  absorbed_sunlit_shaded_extinction_coefs.rst  absorbed_sunlit_shaded_layered.rst  absorbed_sunlit_shaded_reflectance_coefs.rst  conf.py  index.rst  model_uniform_crops.rst  references.rst  uniform_crops.rst  usda_solar_radiation_unit_conversions.doc
doc/figs/: figs.pptx
docs/: conf.py  index.rst  overview.rst  references.rst  requirements.txt
examples/big_leaf_lumped_vs_sunlit_shaded/: sim.py
examples/bigleaf_lumped/: sim.py
examples/bigleaf_lumped_de_pury/: sim.py
examples/bigleaf_lumped_de_pury_vs_sunlit_shaded/: sim.py
examples/bigleaf_lumped_vs_sunlit_shaded/: sim.py
examples/bigleaf_sunlit_shaded/: sim.py
examples/layered_lumped/: sim.py
examples/layered_lumped_de_pury/: sim.py
examples/layered_lumped_de_pury_vs_sunlit_shaded/: sim.py
examples/layered_sunlit_shaded/: sim.py
examples/layered_sunlit_shaded_components/: sim.py
src/crop_irradiance/: __init__.py
src/crop_irradiance.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test/: utils.py
test/test_formalisms/: test_irradiance.py
test/test_row_crops/: test_riou.py
(+17 files in other folders)
